# basketbot

./: .gitignore  CMakeLists.txt  CV  README.md  dump.rdb
computer_vision/: ball_tracker.py  ball_tracker_with_yolo.py  environment.yml  requirements.txt
project_starter/: 03-cartesian_motion_control.cpp  CMakeLists.txt  basketbot-simviz.cpp  basketbot.cpp  basketbot_old.cpp  redis_keys.h  redis_plot.py  robot_arm_up_down.py  robot_tasks.py  simviz_config.xml  world.urdf  world_example.urdf
project_starter/webui_generated_file/: webui.html
urdf_models/panda/: panda_arm.urdf  panda_arm_box.urdf  panda_arm_simulation.urdf
